--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,15 @@ li{
     left:0;
     right:0;
     bottom:0;
-    z-index:2;
 }
 .mask{
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
     background:#333;
-    opacity:0.4;
+    opacity:0.3;
 }
 
 .task{
@@ -39,7 +43,7 @@ li{
     padding-left:0.4rem;
     line-height:1.5rem;
     border-bottom:1px solid #fff;
-    background:#2973b7;
+    background:#4194ca;
     color:#fff;
 }
 .task.finish{
@@ -52,9 +56,9 @@ li{
 
 .task-num{
     float:right;
-    width:1rem;
+    width:1.5rem;
     text-align:center;
-    background:#9cf;
+    background:rgba(255,255,255,0.15);
 }
 
 .info{
