--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 html{
     height:100%;
-    background:#333;
+    background:#222;
 }
 
 li{
@@ -29,8 +29,16 @@ li{
     left:0;
     right:0;
     bottom:0;
-    background:#333;
-    opacity:0.3;
+    background:#222;
+    opacity:0.5;
+}
+
+.top-message{
+    position:absolute;
+    top:-3rem;
+    width:100%;
+    text-align:center;
+    color:#8048e1;
 }
 
 .task{
@@ -43,7 +51,7 @@ li{
     padding-left:0.4rem;
     line-height:1.5rem;
     border-bottom:1px solid #fff;
-    background:#4194ca;
+    background:#8048e1;
     color:#fff;
 }
 .task.finish{
@@ -69,7 +77,7 @@ li{
 .task-finish,.task-del{
     position:absolute;
     height:1rem;
-    z-index:-1;
+    z-index:-1;    //处于最底层
 }
 .task-finish{
     left:0.3rem;
@@ -78,6 +86,10 @@ li{
     right:0.3rem;
 }
 
+.task-create{
+    position:relative;
+    z-index:2;
+}
 .task-create .task{
     transform-style:preserve-3d;
     transform-origin:bottom center;
@@ -88,4 +100,8 @@ input[name=task-name]{
     background:transparent;
     border:none;
     outline:none;
+}
+
+.high-index{
+    z-index:2;   //处于最上层
 }
